added reset feature that works on larger than 50% of voters to trigger
